--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,12 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <name>Ejb client Connection Leak EJB api</name>
   <groupId>org.jboss.qe</groupId>
   <artifactId>ejb-client-connection-leak-ejb-api</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>ejb-client-connection-leak-ejb-api</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-  </dependencies>
+  <version>1.0.0-SNAPSHOT</version>
+
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  <build>
+    <finalName>api</finalName>
+  </build>
 </project>
