--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.ejb.client.connection.leak</groupId>
-  <artifactId>ejb-client-connection-leak</artifactId>
+
+  <name>Ejb client Connection Leak EJB</name>
+  <groupId>org.jboss.qe</groupId>
+  <artifactId>ejb-client-connection-leak-ejb</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
+
   <build>
-    <finalName>ejb-client-connection-leak</finalName>
-    <plugins>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
-      </plugin>
-    </plugins>
+    <finalName>ejb</finalName>
   </build>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -24,11 +18,17 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>org.jboss.qe</groupId>
+      <artifactId>ejb-client-connection-leak-ejb-api</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.spec.javax.ejb</groupId>
       <artifactId>jboss-ejb-api_3.1_spec</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
